--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "rmilton",
   "license": "ISC",
   "dependencies": {
+    "asyncawait": "^1.0.7",
     "request": "^2.88.0",
+    "request-promise-native": "^1.0.5",
     "superagent": "^3.8.3"
   },
   "devDependencies": {
