add restify and server details

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "asyncawait": "^1.0.7",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
+    "restify": "^7.2.1",
     "superagent": "^3.8.3"
   },
   "devDependencies": {
